Update links color to fix normal text color contrast

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
     }
 
     a {
-        @apply text-[#0000F0]
+        @apply text-[#3333FF]
     }
 }
 
